--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="header">
-    <h1>The VC Experience</h1>
+    <h1>М-АРТ ЕООД</h1>
     <div class="navbar">
       <p><a href="#mission">Mission Statement</a></p>
       <p><a href="#portfolio">Portfolio</a></p>
