--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 <div class="header">
     <h1>М-АРТ ЕООД</h1>
     <div class="navbar">
-      <p><a href="#mission">Mission Statement</a></p>
-      <p><a href="#portfolio">Portfolio</a></p>
-      <p><a href="#team">Investment Team</a></p>
+      <p><a href="#mission">Начало</a></p>
+      <p><a href="#portfolio">Портфолио</a></p>
+      <p><a href="https://shop.m-artbg.com/">Онлайн магазин</a></p>
+      <p><a href="#portfolio">Контакти</a></p>
     </div>
   </div>
   <div class="main">
