--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
   </header>
   <main>
 
-    <mission>
+    <div class="mission">
       <div class="content">
         <h2>Ние сме М-АРТ ЕООД.</h2>
         <h4>Ние работим в областта на рекламата, графичния дизайн и предпечатната подготовка от 1990г.
             През тези години успяхме да натрупаме голям опит благодарение на Вас нашите клиенти.
             БЛАГОДАРИМ ВИ!</h4>
       </div>
-    </mission>
+    </div>
 
     <div id="portfolio">
       <div class="content">
