changes to pictures n texts

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Company website</title>
+<title>Рекламна агенция М-АРТ ЕООД</title>
 <link rel="stylesheet" href="style.css" type="text/css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css?family=Lexend+Mega" rel="stylesheet" type="text/css">
@@ -29,8 +29,8 @@
     <div class="mission">
       <div class="content">
         <h2>Ние сме М-АРТ ЕООД.</h2>
-        <h4>Ние работим в областта на рекламата, графичния дизайн и предпечатната подготовка от 1990г.
-            През тези години успяхме да натрупаме голям опит благодарение на Вас нашите клиенти.
+        <h4>Ние работим в областта на рекламата, графичния дизайн и предпечатната подготовка от 1990г.<br>
+            През тези години успяхме да натрупаме голям опит благодарение на Вас нашите клиенти.<br>
             БЛАГОДАРИМ ВИ!</h4>
       </div>
     </div>
@@ -64,34 +64,34 @@
     </div>
 
     <div id="team-container">
-      <h2>Our Team</h2>
+      <h2>Нашия екип</h2>
       <div class="team">
         <div class="teammate">
           <img src="https://content.codecademy.com/PRO/independent-practice-projects/flexbox-business-site/img/employee-one.jpg">
-          <h3>Lisa Fischer</h3>
-          <p>C.E.O. - Founder and Principal Investor</p>
+          <h3>Даниела Мъндева</h3>
+          <p>Собственик/управител</p>
         </div>
         <div class="teammate">
           <img src="https://content.codecademy.com/PRO/independent-practice-projects/flexbox-business-site/img/employee-two.jpg">
-          <h3>Alex Lasker</h3>
-          <p>Partner - Research &amp; Development</p>
+          <h3>Александър Мъндев</h3>
+          <p>Управител</p>
         </div>
         <div class="teammate">
           <img src="https://content.codecademy.com/PRO/independent-practice-projects/flexbox-business-site/img/employee-three.jpg">
-          <h3>Omar Carlsen</h3>
-          <p>Partner - Partnerships &amp; Marketing</p>
+          <h3>Венцислав Мъндев</h3>
+          <p>Управител</p>
         </div>
       </div>
     </div>
 
       <contact>
-        <h2>The VC Experience</h2>
-        <h5>introduction@vcexperience.investors</h5>
-        <h5>555-867-5309</h5>
+        <h2>М-АРТ ЕООД Сливен</h2>
+        <h5>office@m-artbg.com</h5>
+        <h5>0886 523 437</h5>
       </contact>
 
       <copyright>
-        <h5>copyright VC Enterprises 2020</h5>
+        <h5>Copyright М-АРТ ЕООД</h5>
       </copyright>
 
     </main>
